GNOME Bugzilla – Bug 761970
pushsrc: fix minor typo in header
Last modified: 2016-02-12 20:55:06 UTC
Created attachment 321023 [details] [review] minor-typo-fix Minor typo fix; patch attached.
Thanks. Took the liberty to fix up two other typos in the surrounding lines as well. commit 86a46ee43b76e890ecee31bc5d577d78dc2702fa Author: Martin Kelly <martin@surround.io> Date: Fri Feb 12 11:57:55 2016 -0800 pushsrc: fix minor typos in header https://bugzilla.gnome.org/show_bug.cgi?id=761970