pushsrc: fix minor typos in header

https://bugzilla.gnome.org/show_bug.cgi?id=761970