libs/gst/base/gstpushsrc.h
@@ -58,9 +58,9 @@ struct _GstPushSrc {
  *          size this buffer should be. Other then that, refer to
  *          #GstBaseSrc<!-- -->.create() for more details. If this method is
  *          not implemented, @alloc followed by @fill will be called.
- * @alloc: Ask the subclass to allocated a buffer. The subclass decides which
+ * @alloc: Ask the subclass to allocate a buffer. The subclass decides which
  *         size this buffer should be. The default implementation will create
- *         a new buffer from the negotiate allcoator.
+ *         a new buffer from the negotiated allocator.
  * @fill: Ask the subclass to fill the buffer with data.
  *
  * Subclasses can override any of the available virtual methods or not, as
